# peripherals

PiDuinoI2C/: CMakeLists.txt
PiDuinoI2C/src/: PiDuinoI2C_example.cpp
PiDuinoI2C/src/arduino/i2c_slave/src/: main.cpp
pico-ROB14450/: CMakeLists.txt
pico-ROB14450/include/: ROB14450.h
pico-ROB14450/src/: ROB14450.cpp  motor.cpp
pico_LCD/: CMakeLists.txt  test_lcd.cpp
pico_LCD/include/: pico_lcd_i2c.hpp
pico_LCD/src/: pico_lcd_i2c.cpp
